--- a/Notes/SimpleNets.tex
+++ b/Notes/SimpleNets.tex
@@ -252,7 +252,7 @@ able to fit even roughly the $x^2$ function in the domain [-1,1].
 \smallskip
 
 \begin{center}
-\includegraphics[width=0.99\textwidth]{Images/3node_try_largedomain_a_01}
+\includegraphics[width=0.99\textwidth]{Images/3node_largedomain_learnedfunctions_a_01}
 \end{center}
 
 In the figure, some parameter values returned by the Mathematica minimizer are shown.  The points
@@ -264,8 +264,17 @@ those parameter regions.  This probably has to do with the large value of $b_1$.
 to understand this better, e.g., whether the loss function becomes constant as any one of the
 parameters become very large.  
 
-TODO: add a few plots of the loss function as a function of parameters, to illustrate the above
-statements.  
+
+\smallskip
+
+\begin{center}
+\includegraphics[width=0.99\textwidth]{Images/3node_largedomain_fitness_a_01}
+\end{center}
+
+
+TODO: add a few plots of the loss function as a function of parameters around other parameter
+points, e.g., with one of the parameters large.  
+
 
 The experimentation strongly suggests that there is only the pair or minima described above.  It
 would be good to prove or disprove this rigorously!!   
@@ -273,9 +282,16 @@ would be good to prove or disprove this rigorously!!
 Are there interesting structures other than the minima, e.g., saddle points?  
 
 
+\newpage
+
 \subsubsection{Fitting to the domain $x\in[0,1]$}
 
-Using the sigmoid function, it even has difficulty fitting in the range (0,1).  The Softplus
+Question: should we do this?  Or should we restrict to the same problem and domain  $x\in[-1,1]$ for
+each of the three networks.  
+
+Below some old comments from initial pre-exploration; need to be double-checked.
+
+Using the sigmoid function, the 3-node network even has difficulty fitting in the range (0,1).  The Softplus
 function does a better job.
 
 The landscape seems interesting enough --- there are multiple minima. (DOUBLE-CHECK THIS STATEMENT.
