--- a/Notes/SimpleNets.tex
+++ b/Notes/SimpleNets.tex
@@ -247,7 +247,10 @@ Let's provide results below for $n_T=100$.
 \subsubsection{Fitting to the domain $x\in[-1,1]$, sigmoid}
 
 The performance of this primitive network as a learner/predictor is rather limited --- it seems not
-able to fit even roughly the $x^2$ function in the domain [-1,1].  
+able to fit even roughly the $x^2$ function in the domain [-1,1].  In the figure, some parameter
+values returned by the Mathematica minimizer are shown, together with the corresponding learned function.
+
+
 
 \smallskip
 
@@ -255,14 +258,17 @@ able to fit even roughly the $x^2$ function in the domain [-1,1].
 \includegraphics[width=0.99\textwidth]{Images/3node_largedomain_learnedfunctions_a_01}
 \end{center}
 
-In the figure, some parameter values returned by the Mathematica minimizer are shown.  The points
-shown on the top really are minima: one can see this by varying one of the parameters and holding
-the others fixed at this point.  These two minima are mirrors of each other, with $w_1$ value flipped.
+The points shown on the top really are minima: one can see this by varying one of the parameters and
+holding the others fixed at this point.  (Shown below.)  These two minima are mirrors of each other,
+with $w_1$ value flipped.
 
 The parameter values on the bottom row are not really minima --- the loss function is constant in
-those parameter regions.  This probably has to do with the large value of $b_1$.  It would be good
-to understand this better, e.g., whether the loss function becomes constant as any one of the
-parameters become very large.  
+those parameter regions.  These are regions where one of the $b_{1,2}$ is very large.  The cost
+function tends to become constant in such regions.  Presumably, this is a feature of the sigmoid
+function.  
+
+It would be good to understand this better, e.g., whether the loss function becomes constant as any
+one of the parameters become very large.
 
 The experimentation strongly suggests that there is only the pair or minima described above.  It
 would be good to prove or disprove this rigorously!!   
@@ -291,9 +297,37 @@ for various values of $b_2$.
 
 \smallskip
 
+
 \begin{center}
-\includegraphics[width=0.79\textwidth]{Images/3node_largedomain_fitness_vs_w1_varyb2_a_01.pdf}
+\begin{tabular}{ll}
+%\hline
+%
+\parbox{0.82\textwidth}{ 
+%
+
+\begin{flushleft}
+\includegraphics[width=0.81\textwidth]{Images/3node_largedomain_fitness_vs_w1_varyb2_a_01.pdf}
+\end{flushleft}
+
+
+} &   \hspace{-0.01\textwidth}
+\parbox{0.16\textwidth}{ \centering
+
+Held fixed: 
+
+\begin{gather*}
+  w_2 = 3.954
+  \\
+  b_1 = -8.585
+\end{gather*}
+
+
+} 
+\\
+%\hline
+\end{tabular}
 \end{center}
+
 
 As one goes away in either the negative $b_2$ or the positive $b_2$ direction, the $w_1$-dependence
 becomes flat.   This can also be visualized through a 3D plot:
@@ -307,8 +341,6 @@ becomes flat.   This can also be visualized through a 3D plot:
 For large negative $b_2$, the loss function settles to a value around $0.42$;  for large positive
 $b_2$, a value around $1.07$.  These correspond to predicted functions that are constant at $0$ and
 $1$, respectively.  They are certainly not minima!   
-
-
 
 
 TODO: add a few plots of the loss function as a function of parameters around other parameter
